force-app/main/default/objects/Asset/fields/ASS_Chaudiere_connectee__c.field-meta.xml
<CustomField>
    <fullName>ASS_Chaudiere_connectee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chaudière connectée</label>
    <type>Checkbox</type>
</CustomField>