force-app/main/default/objects/Asset/fields/ASS_Combustible__c.field-meta.xml
<CustomField>
    <fullName>ASS_Combustible__c</fullName>
    <label>Combustible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combustible spécifique</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Fioul Lourd</fullName>
            </value>
            <value>
                <fullName>FOD</fullName>
            </value>
            <value>
                <fullName>Mix fod/Gaz</fullName>
            </value>
            <value>
                <fullName>Gaz naturel</fullName>
            </value>
            <value>
                <fullName>Gaz liquefié</fullName>
            </value>
            <value>
                <fullName>Biogaz</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Gaz Propane</fullName>
            </value>
            <value>
                <fullName>Gaz Butane</fullName>
            </value>
            <value>
                <fullName>Autres mixtes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>