force-app/main/default/objects/Asset/fields/ASS_Commande__c.field-meta.xml
<CustomField>
    <fullName>ASS_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>