force-app/main/default/objects/Asset/fields/ASS_Commentaire_sur_Situation_dangereuse__c.field-meta.xml
<CustomField>
    <fullName>ASS_Commentaire_sur_Situation_dangereuse__c</fullName>
    <label>Commentaire sur la Situation dangereuse</label>
    <type>TextArea</type>
</CustomField>