force-app/main/default/objects/Asset/fields/ASS_CommentaireNonConformite__c.field-meta.xml
<CustomField>
    <fullName>ASS_CommentaireNonConformite__c</fullName>
    <label>Commentaire sur la non conformité</label>
    <type>TextArea</type>
</CustomField>