force-app/main/default/objects/Asset/fields/ASS_Commentaires__c.field-meta.xml
<CustomField>
    <fullName>ASS_Commentaires__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>