force-app/main/default/objects/Asset/fields/ASS_CommentairesSite__c.field-meta.xml
<CustomField>
    <fullName>ASS_CommentairesSite__c</fullName>
    <label>Commentaires site</label>
    <type>TextArea</type>
</CustomField>