force-app/main/default/objects/Asset/fields/ASS_Composant__c.field-meta.xml
<CustomField>
    <fullName>ASS_Composant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Composants</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Composants</relationshipLabel>
    <relationshipName>equipements</relationshipName>
    <type>Lookup</type>
</CustomField>