force-app/main/default/objects/Asset/fields/ASS_CompteExploitant__c.field-meta.xml
<CustomField>
    <fullName>ASS_CompteExploitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exploitant de l&apos;équipement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Équipements (Compte Exploitant)</relationshipLabel>
    <relationshipName>EquipementsExploitant</relationshipName>
    <type>Lookup</type>
</CustomField>