force-app/main/default/objects/Asset/fields/ASS_CompteInstallateur__c.field-meta.xml
<CustomField>
    <fullName>ASS_CompteInstallateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installateur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actifs (Installateur)</relationshipLabel>
    <relationshipName>Actifs1</relationshipName>
    <type>Lookup</type>
</CustomField>