force-app/main/default/objects/Asset/fields/ASS_CompteProprietaire__c.field-meta.xml
<CustomField>
    <fullName>ASS_CompteProprietaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire de l&apos;équipement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Équipements (Compte Propriétaire)</relationshipLabel>
    <relationshipName>EquipementsProprietaires</relationshipName>
    <type>Lookup</type>
</CustomField>