force-app/main/default/objects/Asset/fields/ASS_ContactExploitant__c.field-meta.xml
<CustomField>
    <fullName>ASS_ContactExploitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interlocuteur chez l&apos;exploitant</description>
    <label>Contact Exploitant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AssetServicedById</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actifs</relationshipLabel>
    <relationshipName>Actifs</relationshipName>
    <type>Lookup</type>
</CustomField>