force-app/main/default/objects/Asset/fields/ASS_ContactProprietaire__c.field-meta.xml
<CustomField>
    <fullName>ASS_ContactProprietaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Propriétaire</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AssetProvidedById</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipements (Contact Propriétaire)</relationshipLabel>
    <relationshipName>Equipements1</relationshipName>
    <type>Lookup</type>
</CustomField>