force-app/main/default/objects/Asset/fields/ASS_ContratDeService__c.field-meta.xml
<CustomField>
    <fullName>ASS_ContratDeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat de service</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Actifs</relationshipLabel>
    <relationshipName>Actifs</relationshipName>
    <type>Lookup</type>
</CustomField>