force-app/main/default/objects/Asset/fields/ASS_DateDeConstatDeNonConformite__c.field-meta.xml
<CustomField>
    <fullName>ASS_DateDeConstatDeNonConformite__c</fullName>
    <label>Date de constat de non conformité</label>
    <type>Date</type>
</CustomField>