force-app/main/default/objects/Asset/fields/ASS_DateDeDernierRemplacement__c.field-meta.xml
<CustomField>
    <fullName>ASS_DateDeDernierRemplacement__c</fullName>
    <description>Date de dernier remplacement de la pièce</description>
    <label>Date de dernier remplacement</label>
    <type>Date</type>
</CustomField>