force-app/main/default/objects/Asset/fields/ASS_DateDerniereEpreuve__c.field-meta.xml
<CustomField>
    <fullName>ASS_DateDerniereEpreuve__c</fullName>
    <label>Date de dernière épreuve</label>
    <type>Date</type>
</CustomField>