force-app/main/default/objects/Asset/fields/ASS_DatePremiereEpreuve__c.field-meta.xml
<CustomField>
    <fullName>ASS_DatePremiereEpreuve__c</fullName>
    <label>Date de première épreuve</label>
    <type>Date</type>
</CustomField>