force-app/main/default/objects/Asset/fields/ASS_DateTransfertPropriete__c.field-meta.xml
<CustomField>
    <fullName>ASS_DateTransfertPropriete__c</fullName>
    <description>Date administrative pour le départ de la garantie</description>
    <label>Date de transfert de propriété</label>
    <type>Date</type>
</CustomField>