force-app/main/default/objects/Asset/fields/ASS_Debit__c.field-meta.xml
<CustomField>
    <fullName>ASS_Debit__c</fullName>
    <label>Débit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Débit 1</fullName>
            </value>
            <value>
                <fullName>Débit 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>