force-app/main/default/objects/Asset/fields/ASS_DescriptionLocal__c.field-meta.xml
<CustomField>
    <fullName>ASS_DescriptionLocal__c</fullName>
    <description>Description détaillée de l&apos;emplacement de l&apos;équipement</description>
    <label>Description du local</label>
    <type>TextArea</type>
</CustomField>