force-app/main/default/objects/Asset/fields/ASS_Disponibilite__c.field-meta.xml
<CustomField>
    <fullName>ASS_Disponibilite__c</fullName>
    <label>Disponibilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispo 1</fullName>
                <default>true</default>
                <label>Dispo 1</label>
            </value>
            <value>
                <fullName>Dispo 2</fullName>
            </value>
            <value>
                <fullName>Dispo 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>