force-app/main/default/objects/Asset/fields/ASS_Dossier_constructeur__c.field-meta.xml
<CustomField>
    <fullName>ASS_Dossier_constructeur__c</fullName>
    <label>Dossier constructeur</label>
    <type>Url</type>
</CustomField>