force-app/main/default/objects/Asset/fields/ASS_DureeExtension__c.field-meta.xml
<CustomField>
    <fullName>ASS_DureeExtension__c</fullName>
    <label>Durée extension (An)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>