force-app/main/default/objects/Asset/fields/ASS_Economiseur__c.field-meta.xml
<CustomField>
    <fullName>ASS_Economiseur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Economiseur</label>
    <type>Checkbox</type>
</CustomField>