force-app/main/default/objects/Asset/fields/ASS_Etage__c.field-meta.xml
<CustomField>
    <fullName>ASS_Etage__c</fullName>
    <description>le numéro d&apos;étage où se trouve l&apos;équipement</description>
    <label>Etage</label>
    <length>18</length>
    <type>Text</type>
</CustomField>