force-app/main/default/objects/Asset/fields/ASS_GarantieMateriel__c.field-meta.xml
<CustomField>
    <fullName>ASS_GarantieMateriel__c</fullName>
    <label>Garantie matériel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corps</fullName>
            </value>
            <value>
                <fullName>Brûleur</fullName>
            </value>
            <value>
                <fullName>Economiseur</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>