force-app/main/default/objects/Asset/fields/ASS_Marque__c.field-meta.xml
<CustomField>
    <fullName>ASS_Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Babcock Wanson</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Viessmann</fullName>
            </value>
            <value>
                <fullName>Bono</fullName>
            </value>
            <value>
                <fullName>Stein</fullName>
            </value>
            <value>
                <fullName>Ici Caldaie</fullName>
            </value>
            <value>
                <fullName>Clayton</fullName>
            </value>
            <value>
                <fullName>Mingazzini</fullName>
            </value>
            <value>
                <fullName>Ferroli</fullName>
            </value>
            <value>
                <fullName>Cochran</fullName>
            </value>
            <value>
                <fullName>I.VAR</fullName>
            </value>
            <value>
                <fullName>Fulton</fullName>
            </value>
            <value>
                <fullName>Byworth</fullName>
            </value>
            <value>
                <fullName>Jumag</fullName>
            </value>
            <value>
                <fullName>Certuss</fullName>
            </value>
            <value>
                <fullName>Pirobloc</fullName>
            </value>
            <value>
                <fullName>Attsu</fullName>
            </value>
            <value>
                <fullName>Weishaupt</fullName>
            </value>
            <value>
                <fullName>Saacke</fullName>
            </value>
            <value>
                <fullName>Oilon</fullName>
            </value>
            <value>
                <fullName>Pillard</fullName>
            </value>
            <value>
                <fullName>Cuenod</fullName>
            </value>
            <value>
                <fullName>RIELLO</fullName>
            </value>
            <value>
                <fullName>BALTUR</fullName>
            </value>
            <value>
                <fullName>RAY International</fullName>
            </value>
            <value>
                <fullName>Dunphy</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>