force-app/main/default/objects/Asset/fields/ASS_ModedExploitation__c.field-meta.xml
<CustomField>
    <fullName>ASS_ModedExploitation__c</fullName>
    <label>Mode d&apos;exploitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>SPHP (3J)</fullName>
            </value>
            <value>
                <fullName>SPHP (7J)</fullName>
            </value>
            <value>
                <fullName>SPHP (8h)</fullName>
            </value>
            <value>
                <fullName>SPHP (Autocontrôle)</fullName>
            </value>
            <value>
                <fullName>Mode d&apos;exploitation Spécifique</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>SPHP (24h)</fullName>
            </value>
            <value>
                <fullName>SPHP (720h)</fullName>
            </value>
            <value>
                <fullName>SPHP (2h)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>