force-app/main/default/objects/Asset/fields/ASS_MotifArret__c.field-meta.xml
<CustomField>
    <fullName>ASS_MotifArret__c</fullName>
    <label>Motif d&apos;arrêt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation non conforme</fullName>
            </value>
            <value>
                <fullName>Installation défectueuse</fullName>
            </value>
            <value>
                <fullName>Organisme de contrôle</fullName>
            </value>
            <value>
                <fullName>Demande client</fullName>
            </value>
            <value>
                <fullName>Motif 3</fullName>
                <isActive>false</isActive>
                <label>Motif 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>