force-app/main/default/objects/Asset/fields/ASS_NonConformite__c.field-meta.xml
<CustomField>
    <fullName>ASS_NonConformite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-conformité</label>
    <type>Checkbox</type>
</CustomField>