force-app/main/default/objects/Asset/fields/ASS_Note_commerciale__c.field-meta.xml
<CustomField>
    <fullName>ASS_Note_commerciale__c</fullName>
    <label>Note commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>