force-app/main/default/objects/Asset/fields/ASS_Num_de_serie_du_corps__c.field-meta.xml
<CustomField>
    <fullName>ASS_Num_de_serie_du_corps__c</fullName>
    <label>N° de série du corps</label>
    <length>50</length>
    <type>Text</type>
</CustomField>