force-app/main/default/objects/Asset/fields/ASS_Numero_d_identite_Ancienne_ref__c.field-meta.xml
<CustomField>
    <fullName>ASS_Numero_d_identite_Ancienne_ref__c</fullName>
    <label>Numéro d&apos;identité (Ancienne ref)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>