force-app/main/default/objects/Asset/fields/ASS_NumeroIdentite__c.field-meta.xml
<CustomField>
    <fullName>ASS_NumeroIdentite__c</fullName>
    <description>Numéro d&apos;identification de l&quot;équipement</description>
    <label>Numéro d&apos;identité</label>
    <length>50</length>
    <type>Text</type>
</CustomField>