force-app/main/default/objects/Asset/fields/ASS_NUniqueEquipement__c.field-meta.xml
<CustomField>
    <fullName>ASS_NUniqueEquipement__c</fullName>
    <displayFormat>E-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>N° Unique équipement</label>
    <type>AutoNumber</type>
</CustomField>