force-app/main/default/objects/Asset/fields/ASS_PlanDePrevention__c.field-meta.xml
<CustomField>
    <fullName>ASS_PlanDePrevention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de prévention</label>
    <referenceTo>PlanDePrevention__c</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>