force-app/main/default/objects/Asset/fields/ASS_PlanDePreventionActif__c.field-meta.xml
<CustomField>
    <fullName>ASS_PlanDePreventionActif__c</fullName>
    <formula>IF (AND (ASS_PlanDePrevention__r.PP_DatedeRealisation__c &lt;= Today(), ASS_PlanDePrevention__r.PP_DateDeFin__c  &gt;= TODAY()), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan de prévention Actif</label>
    <type>Checkbox</type>
</CustomField>