force-app/main/default/objects/Asset/fields/ASS_PMA__c.field-meta.xml
<CustomField>
    <fullName>ASS_PMA__c</fullName>
    <label>PMA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>