force-app/main/default/objects/Asset/fields/ASS_PreconisationRemplacementHeure__c.field-meta.xml
<CustomField>
    <fullName>ASS_PreconisationRemplacementHeure__c</fullName>
    <description>Préconisation de remplacement d&apos;une pièce ne maintenance préventive</description>
    <label>Préconisation remplacement (Heure)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>