force-app/main/default/objects/Asset/fields/ASS_Pression__c.field-meta.xml
<CustomField>
    <fullName>ASS_Pression__c</fullName>
    <label>Pression</label>
    <length>50</length>
    <type>Text</type>
</CustomField>