force-app/main/default/objects/Asset/fields/ASS_PrioriteDeMaintenance__c.field-meta.xml
<CustomField>
    <fullName>ASS_PrioriteDeMaintenance__c</fullName>
    <description>Détermine les engagements de priorité sur les composants</description>
    <label>Priorité de maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priorité 1</fullName>
                <default>true</default>
                <label>Priorité 1</label>
            </value>
            <value>
                <fullName>Priorité 2</fullName>
            </value>
            <value>
                <fullName>Priorité 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>