force-app/main/default/objects/Asset/fields/ASS_PuissanceDebit__c.field-meta.xml
<CustomField>
    <fullName>ASS_PuissanceDebit__c</fullName>
    <label>Puissance / Débit</label>
    <length>250</length>
    <type>Text</type>
</CustomField>