force-app/main/default/objects/Asset/fields/ASS_ReferenceClient__c.field-meta.xml
<CustomField>
    <fullName>ASS_ReferenceClient__c</fullName>
    <label>Référence client</label>
    <length>16</length>
    <type>Text</type>
</CustomField>