force-app/main/default/objects/Asset/fields/ASS_Rendement__c.field-meta.xml
<CustomField>
    <fullName>ASS_Rendement__c</fullName>
    <label>Rendement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rendement 1</fullName>
            </value>
            <value>
                <fullName>Rendement 2</fullName>
            </value>
            <value>
                <fullName>Rendement 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>