force-app/main/default/objects/Asset/fields/ASS_SituationDangereuse__c.field-meta.xml
<CustomField>
    <fullName>ASS_SituationDangereuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Situation dangereuse</label>
    <type>Checkbox</type>
</CustomField>