force-app/main/default/objects/Asset/fields/ASS_Telesurveillance__c.field-meta.xml
<CustomField>
    <fullName>ASS_Telesurveillance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Télésurveillance</label>
    <type>Checkbox</type>
</CustomField>