force-app/main/default/objects/Asset/fields/ASS_TempsDeFonctionnement__c.field-meta.xml
<CustomField>
    <fullName>ASS_TempsDeFonctionnement__c</fullName>
    <description>Heure de foncionnement machine</description>
    <label>Temps de remplacement préconisé (H)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>