force-app/main/default/objects/Asset/fields/ASS_TypeEmplacement__c.field-meta.xml
<CustomField>
    <fullName>ASS_TypeEmplacement__c</fullName>
    <description>Descriptif du type d&apos;emplacement de l&apos;équipement</description>
    <label>Type d&apos;emplacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bâtiment</fullName>
            </value>
            <value>
                <fullName>Buanderie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>