force-app/main/default/objects/Asset/fields/ASS_URL__c.field-meta.xml
<CustomField>
    <fullName>ASS_URL__c</fullName>
    <description>Ce champ permet d&apos;insérer un lien notamment pour le partage de document.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>