force-app/main/default/objects/Asset/fields/Automate__c.field-meta.xml
<CustomField>
    <fullName>Automate__c</fullName>
    <label>Automate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wago</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Schneider</fullName>
            </value>
            <value>
                <fullName>Rockwell</fullName>
            </value>
            <value>
                <fullName>Omron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>