force-app/main/default/objects/Asset/fields/BMS__c.field-meta.xml
<CustomField>
    <fullName>BMS__c</fullName>
    <label>BMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAMTEC - Etamatic</fullName>
            </value>
            <value>
                <fullName>LAMTEC - BT300</fullName>
            </value>
            <value>
                <fullName>LAMTEC - FMS</fullName>
            </value>
            <value>
                <fullName>LAMTEC - CMS</fullName>
            </value>
            <value>
                <fullName>Autres BMS</fullName>
            </value>
            <value>
                <fullName>SIEMENS – LMO</fullName>
            </value>
            <value>
                <fullName>SIEMENS – LFL</fullName>
            </value>
            <value>
                <fullName>SIEMENS  - LGK</fullName>
            </value>
            <value>
                <fullName>SIEMENS - LAL</fullName>
            </value>
            <value>
                <fullName>SIEMENS – LOK</fullName>
            </value>
            <value>
                <fullName>FIREYE – BP230</fullName>
            </value>
            <value>
                <fullName>FIREYE – BP110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>