force-app/main/default/objects/Asset/fields/Bruleur__c.field-meta.xml
<CustomField>
    <fullName>Bruleur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brûleur</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>quipements</relationshipName>
    <type>Lookup</type>
</CustomField>