force-app/main/default/objects/Asset/fields/CompteExploitant__c.field-meta.xml
<CustomField>
    <fullName>CompteExploitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compte exploitant l&apos;Asset</description>
    <label>Exploitant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Équipements (Compte Exploitant)</relationshipLabel>
    <relationshipName>Actifs_del</relationshipName>
    <type>Lookup</type>
</CustomField>