force-app/main/default/objects/Asset/fields/EQ_SousContrat__c.field-meta.xml
<CustomField>
    <fullName>EQ_SousContrat__c</fullName>
    <description>Indicateur pour les clients du portail, leur permettant de savoir si leur équipement est sous contrat.</description>
    <formula>IF(ISBLANK(  ASS_ContratDeService__r.ContractNumber  ),0,2)</formula>
    <label>Sous Contrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>