force-app/main/default/objects/Asset/fields/RemplacementDemande__c.field-meta.xml
<CustomField>
    <fullName>RemplacementDemande__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remplacement demandé</label>
    <type>Checkbox</type>
</CustomField>