force-app/main/default/objects/Asset/fields/sous_famille_produit__c.field-meta.xml
<CustomField>
    <fullName>sous_famille_produit__c</fullName>
    <label>Sous-famille produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chaudière</fullName>
                <default>true</default>
                <label>Chaudière</label>
            </value>
            <value>
                <fullName>Chauffage</fullName>
            </value>
            <value>
                <fullName>Traitement eau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>