force-app/main/default/objects/Asset/fields/TECH_Date_de_la_prochaine_peuve__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_de_la_prochaine_peuve__c</fullName>
    <formula>IF((ISBLANK(  ASS_DateDerniereEpreuve__c)), ADDMONTHS(ASS_DatePremiereEpreuve__c,120), ADDMONTHS( ASS_DateDerniereEpreuve__c ,120))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Date de la prochaine épeuve</label>
    <type>Date</type>
</CustomField>