force-app/main/default/objects/Asset/fields/TECH_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>TECH_Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ne pas supprimer ce champ technique destiné au remplacement de produit .</description>
    <label>TECH_Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>