force-app/main/default/objects/Asset/fields/TECH_QualificationEquipement__c.field-meta.xml
<CustomField>
    <fullName>TECH_QualificationEquipement__c</fullName>
    <description>Ne pas supprimer ce champ technique.</description>
    <formula>IF( RecordTypeId = &quot;0120O000000XJBPQA4&quot;,2,
			IF( RecordTypeId = &quot;0120O000000wHBEQA2&quot;,1,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_QualificationEquipement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>