force-app/main/default/objects/Asset/fields/TECH_Sous_Opp__c.field-meta.xml
<CustomField>
    <fullName>TECH_Sous_Opp__c</fullName>
    <formula>IF( TECH_Opportunite__r.Equipement__r.Id =  Id , &quot;OPP&quot;, &quot;PASOPP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_SOUS_OPP</label>
    <type>Text</type>
</CustomField>