force-app/main/default/objects/Asset/recordTypes/ComposantEquipement.recordType-meta.xml
<RecordType>
    <fullName>ComposantEquipement</fullName>
    <active>true</active>
    <description>Composant d&apos;un équipement installé</description>
    <label>Composant d&apos;équipement</label>
</RecordType>