force-app/main/default/objects/Asset/recordTypes/Equipement.recordType-meta.xml
<RecordType>
    <fullName>Equipement</fullName>
    <active>true</active>
    <description>Equipement client</description>
    <label>Equipement</label>
</RecordType>