force-app/main/default/objects/Asset/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <description>Ensemble d&apos;équipements client</description>
    <label>Installation</label>
</RecordType>