force-app/main/default/objects/Asset/validationRules/ASS_VR01_ModificationInfoEquipment.validationRule-meta.xml
<ValidationRule>
    <fullName>ASS_VR01_ModificationInfoEquipment</fullName>
    <active>true</active>
    <description>Les informations d&apos;un équipment créé ne peuvent pas être modifiées.</description>
    <errorConditionFormula>AND(
!$User.USER_ByPassRegleValidation__c,
!ISBLANK( Produit_command__c  ) ,
 
 OR(ISCHANGED(AccountId),
 ISCHANGED(Product2Id),
ISCHANGED(ASS_Commande__c),
ISCHANGED(RecordTypeId)  
)
)</errorConditionFormula>
    <errorMessage>Les informations d&apos;un équipment créé sur un produit commandé ne peuvent pas être modifiées.</errorMessage>
</ValidationRule>