force-app/main/default/objects/Asset/validationRules/ASS_VR02_UnEquipementProduitCommande.validationRule-meta.xml
<ValidationRule>
    <fullName>ASS_VR02_UnEquipementProduitCommande</fullName>
    <active>true</active>
    <description>Un produit commandé doit avoir exactement autant d&apos;équipements que sa quantité annoncée</description>
    <errorConditionFormula>AND(
!$User.USER_ByPassRegleValidation__c,
ISNEW(),
Produit_command__r.Equipement_cree__c
)</errorConditionFormula>
    <errorMessage>Vérifier qu&apos;il y a déjà autant d&apos;équipements que la quantité annoncée au niveau du produit commandé</errorMessage>
</ValidationRule>