force-app/main/default/objects/Asset/validationRules/ASS_VR03_CommentaireSINonConformite.validationRule-meta.xml
<ValidationRule>
    <fullName>ASS_VR03_CommentaireSINonConformite</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!$User.USER_ByPassRegleValidation__c,
 ASS_NonConformite__c = True,
 ISBLANK( ASS_CommentaireNonConformite__c )
)</errorConditionFormula>
    <errorDisplayField>ASS_CommentaireNonConformite__c</errorDisplayField>
    <errorMessage>Merci de renseigner le commentaire sur la non-conformité</errorMessage>
</ValidationRule>