force-app/main/default/objects/Asset/validationRules/ASS_VR04_ComSituationsSINonConformite.validationRule-meta.xml
<ValidationRule>
    <fullName>ASS_VR04_ComSituationsSINonConformite</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!$User.USER_ByPassRegleValidation__c, 
ASS_SituationDangereuse__c = True,
ISBLANK( ASS_Commentaire_sur_Situation_dangereuse__c) 
)</errorConditionFormula>
    <errorDisplayField>ASS_Commentaire_sur_Situation_dangereuse__c</errorDisplayField>
    <errorMessage>Merci de renseigner le commentaire sur la Situation dangereuse</errorMessage>
</ValidationRule>