force-app/main/default/objects/Asset/validationRules/VR01_ASS_MiseEnServiceObligSiEnService.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ASS_MiseEnServiceObligSiEnService</fullName>
    <active>true</active>
    <description>Si le statut de l&apos;équipement est en &quot;En Service&quot;, alors une date de mise en service doit être obligatoirement renseignée.</description>
    <errorConditionFormula>(ISPICKVAL(Status,&quot;En_service&quot;)) &amp;&amp;
(ISBLANK(InstallDate))</errorConditionFormula>
    <errorMessage>Le statut de l&apos;équipement est &quot;En service&quot;, veuillez renseigner une Date de mise en service.</errorMessage>
</ValidationRule>