force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>sous_famille_produit__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASS_Commande__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Equipement</value>
    </filters>
    <label>Tous les équipements</label>
</ListView>