force-app/main/default/objects/Asset/listViews/Composants.listView-meta.xml
<ListView>
    <fullName>Composants</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.ComposantEquipement</value>
    </filters>
    <label>Composants</label>
</ListView>